--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
         <div class="column">
                     
 <div class="content-title">
-                <h3 class="subtitle">Enjoy development again.</h3>
+                <h3 class="subtitle">Secure your work on files.</h3>
     </div>
 
             <div class="content-body">
-                <p>Rapidly develop and deploy beautiful and feature-rich websites and apps with a content management system relied upon by developers and agencies around the world.</p>
+                <p>Friendly and easy-to-use program to save and restore your desktop configuration.</p>
 
 <p><a class="btn-primary btn btn-bold" href="/install">Get started with DSave</a></p>
             </div>
