--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="content-body">
                 <p>Friendly and easy-to-use program to save and restore your desktop configuration.</p>
 
-<p><a class="btn-primary btn btn-bold" href="/install">Get started with DSave</a></p>
+<p><a class="btn-primary btn btn-bold" href="/install">Install DSave</a></p>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="content-body">
-                    <p><a href="https://github.com/dsave/dsave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a> is a free, open-source content management system based on the <a href="https://laravel.com" rel="noopener noreferrer" target="_blank"><strong>Laravel PHP framework</strong></a>. Developers and agencies all around the world rely upon DSave for its quick prototyping and development, safe and secure codebase and dedication to simplicity</p>
+                    <p><a href="https://github.com/dsave/dsave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a>DSave is a small program written in python that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files. <a href="https://python.org" rel="noopener noreferrer" target="_blank"><strong>Python</strong></a>. that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files.</p>
 
                     <p><a class="btn btn-primary" href="/features">View our Features</a> <a class="btn-secondary btn" href="https://github.com/DSave/winter" rel="noopener noreferrer" target="_blank">Contribute to DSave</a></p>
                 </div>
