--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="content-body">
                 <p>Friendly and easy-to-use program to save and restore your desktop configuration.</p>
 
-<p><a class="btn-primary btn btn-bold" href="/install">Install DSave</a></p>
+<p><a class="btn-primary btn btn-bold" href="/install">Get started with DSave</a></p>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="content-body">
-                    <p><a href="https://github.com/dsave/dsave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a>DSave is a small program written in python that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files. <a href="https://python.org" rel="noopener noreferrer" target="_blank"><strong>Python</strong></a>. that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files.</p>
+                    <p><a href="https://github.com/Softwareincorp/DSave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a>is a small program written in <a href="https://python.org" rel="noopener noreferrer" target="_blank"><strong>Python</strong></a>. that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files.</p>
 
                     <p><a class="btn btn-primary" href="/features">View our Features</a> <a class="btn-secondary btn" href="https://github.com/DSave/winter" rel="noopener noreferrer" target="_blank">Contribute to DSave</a></p>
                 </div>
@@ -118,19 +118,19 @@
                         <div class="card-image">
                             <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="./storage/media/home-ctas/speed.png">
                             <noscript>
-                                <img src="./storage/media/home-ctas/speed.png">
+                                <img src="./storage/media/home-ctas/secure.png">
                             </noscript>
                         </div>
 
                         <div class="card-header">
                             
                             <div class="content-title">
-                                <h4 class="title">Speed</h4>
+                                <h4 class="title">Secure</h4>
                             </div>
                         </div>
 
                         <div class="card-body text-center">
-                            Smart system design, caching and other optimizations ensure that your projects perform well under pressure.
+                            Simple design, caching  ensure that your files secure well.
                         </div>
 
                     </div>
@@ -174,29 +174,7 @@
                                 </div>
 
                                 <div class="card-body text-center">
-                                    Careful iterations with backwards-compatibility in focus give you peace of mind that your website will function for years.
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="call-to-action card">
-                                 <div class="card-image">
-                                    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="./storage/media/home-ctas/security.png">
-                                    <noscript>
-                                        <img src="./storage/media/home-ctas/security.png">
-                                    </noscript>
-                                </div>
-
-                                <div class="card-header">
-                            
-                                    <div class="content-title">
-                                        <h4 class="title">Security</h4>
-                                    </div>
-                                </div>
-
-                                <div class="card-body text-center">
-                                    With full source code access and transparency, DSave is carefully monitored. Security issues are promptly addressed.
+                                    All the functionality of the program is aimed at giving you confidence that your files are saved.
                                 </div>
 
                             </div>
