--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         </div>
 
                         <div class="card-body text-center">
-                            Build intricate websites with little more than HTML, CSS and JavaScript through a beautiful, user-friendly Backend panel.
+                            Create numerous saves using a beautiful and convenient panel
                         </div>
 
                     </div>
