--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="content-body">
-                    <p><a href="https://github.com/Softwareincorp/DSave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a>is a small program written in <a href="https://python.org" rel="noopener noreferrer" target="_blank"><strong>Python</strong></a>. that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files.</p>
+                    <p><a href="https://github.com/Softwareincorp/DSave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a> is a small program written in <a href="https://python.org" rel="noopener noreferrer" target="_blank"><strong>Python</strong></a>. that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files.</p>
 
                     <p><a class="btn btn-primary" href="/features">View our Features</a> <a class="btn-secondary btn" href="https://github.com/DSave/winter" rel="noopener noreferrer" target="_blank">Contribute to DSave</a></p>
                 </div>
@@ -118,14 +118,14 @@
                         <div class="card-image">
                             <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" data-src="./storage/media/home-ctas/speed.png">
                             <noscript>
-                                <img src="./storage/media/home-ctas/secure.png">
+                                <img src="./storage/media/home-ctas/security.png">
                             </noscript>
                         </div>
 
                         <div class="card-header">
                             
                             <div class="content-title">
-                                <h4 class="title">Secure</h4>
+                                <h4 class="title">Security</h4>
                             </div>
                         </div>
 
@@ -224,10 +224,10 @@
                             12 Bug Fixes, 6 Security Improvements, 8 Translation Improvements
                         </p>
 
-                        <a href="https://DSave.com/releases/v1.1.0" class="btn btn-primary show-md">
+                        <a href="https://github.com/Softwareincorp/DSave/releases/tag/DSave-v1.1" class="btn btn-primary show-md">
                             View details
                         </a>
-                        <a href="https://DSave.com/releases" class="btn btn-secondary show-md">
+                        <a href="https://github.com/Softwareincorp/DSave/releases" class="btn btn-secondary show-md">
                             View all releases
                         </a>
                     </div>
@@ -246,11 +246,11 @@
                 </div>
 
                 <div class="column right text-center">
-                    <a href="https://DSave.com/releases/v1.1.8" class="btn btn-primary">
+                    <a href="https://github.com/Softwareincorp/DSave/releases/tag/DSave-v1.1" class="btn btn-primary">
                         View details
                     </a>
                     <br><br>
-                    <a href="https://DSave.com/releases" class="btn btn-secondary">
+                    <a href="https://github.com/Softwareincorp/DSave/releases" class="btn btn-secondary">
                         View all releases
                     </a>
                 </div>
@@ -272,7 +272,7 @@
                 <a href="https://DSave.com/support" title="Support">Support</a>
             </li>
             <li class="">
-                <a href="https://DSave.com/releases" title="Releases">Releases</a>
+                <a href="https://github.com/Softwareincorp/DSave/releases" title="Releases">Releases</a>
             </li>
             <li class="">
                 <a href="https://DSave.com/docs" title="Documentation">Documentation</a>
@@ -286,7 +286,7 @@
                         <a href="/cdn-cgi/l/email-protection#3058555c5c5f7047595e445542535d431e535f5d" target="_blank">
                             <i class="fa fa-envelope"></i>
                         </a>
-                        <a href="https://github.com/DSave/dsave" target="_blank">
+                        <a href="https://github.com/Softwareincorp/DSave" target="_blank">
                             <i class="fab fa-github"></i>
                     </div>
                 </div>
