--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="content-body">
                 <p>Friendly and easy-to-use program to save and restore your desktop configuration.</p>
 
-<p><a class="btn-primary btn btn-bold" href="/install">Get started with DSave</a></p>
+<p><a class="btn-primary btn btn-bold" href="https://github.com/Softwareincorp/DSave/releases/download/DSave-v1.1/DSave.exe">Get started with DSave</a></p>
             </div>
         </div>
 
@@ -197,12 +197,12 @@
 
                     <div class="content-body">
                         <p>
-                            <strong>Published April 18, 2022</strong>
+                            <strong>Published May 7, 2022</strong>
                             <br>
-                            Winter.Redirect has been released; a first party DSave plugin to manage redirects on your DSave powered sites.
+                            First official DSave programm relese.
                         </p>
 
-                        <a href="https://DSave.com/blog/post/winter-redirect-plugin-now-available" class="btn btn-primary show-md">
+                        <a href="https://github.com/Softwareincorp/DSave/releases/tag/DSave-v1.1" class="btn btn-primary show-md">
                             View this post
                         </a>
                         <a href="https://DSave.com/blog/latest" class="btn btn-secondary show-md">
@@ -236,11 +236,11 @@
 
             <div class="columns hide-md">
                 <div class="column left text-center">
-                    <a href="https://DSave.com/blog/post/winter-redirect-plugin-now-available" class="btn btn-primary">
+                    <a href="https://github.com/Softwareincorp/DSave/releases/tag/DSave-v1.1" class="btn btn-primary">
                         View this post
                     </a>
                     <br><br>
-                    <a href="https://DSave.com/blog/latest" class="btn btn-secondary">
+                    <a href="https://github.com/Softwareincorp/DSave/releases/tag/DSave-v1.1" class="btn btn-secondary">
                         Read all posts
                     </a>
                 </div>
