--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                 </div>
 
                 <div class="content-body">
-                    <p><a href="https://github.com/Softwareincorp/DSave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a> is a small program written in <a href="https://python.org" rel="noopener noreferrer" target="_blank"><strong>Python</strong></a>. that allows you to remember the position of icons on the desktop, save their size, and also create saves for these files.</p>
+                    <p><a href="https://github.com/Softwareincorp/DSave" rel="noopener noreferrer" target="_blank"><strong>DSave</strong></a> is a small program written in <a href="https://python.org" rel="noopener noreferrer" target="_blank"><strong>Python</strong></a>.Software allows you to remember the position of icons on the desktop, save their size, and also create saves for these files.</p>
 
-                    <p><a class="btn btn-primary" href="/features">View our Features</a> <a class="btn-secondary btn" href="https://github.com/DSave/winter" rel="noopener noreferrer" target="_blank">Contribute to DSave</a></p>
+                    <p><a class="btn btn-primary" href="https://www.buymeacoffee.com/softwarecoreink">Support project</a>
                 </div>
             
             </div>
