--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <a href="https://github.com/Softwareincorp/DSave/releases" title="Releases">Releases</a>
             </li>
             <li class="">
-                <a href="https://DSave.com/docs" title="Documentation">Documentation</a>
+                <a href="https://github.com/Softwareincorp/DSave" title="Documentation">Documentation</a>
             </li>
         </ul>
             </div>
